rustcc/tests/input/lexer/invalid/digit_overflow.c
// RUN: ${{rustcc}} --print-tokens
// EXPECT-FAILURE

int main()
{
    return 99999999999999999999;
}